# project-server-rag

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.celery
evaluation/notebook/: evaolution.ipynb
evaluation/scripts/: collect_data.py  run_evolution.py
evaluation/scripts/datasets/: evaluation_results.csv  ragas_evaluation_dataset-1.json
notebooks/: simple_agent.ipynb
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  guardrails.py  runner.py  state.py
src/agents/graphs/: __init__.py  agentic_agent.py  simple_agent.py  streaming_agent.py
src/agents/nodes/: __init__.py  agent_node.py  respond_node.py  tool_node.py
src/agents/tools/: __init__.py  rag_tool.py  web_search_tool.py
src/api/: __init__.py  deps.py
src/api/v1/: router.py
src/core/: __init__.py  exceptions.py  middleware.py  security.py
src/models/: __init__.py  enums.py
src/rag/: __init__.py  context_builder.py  hybrid_search.py  keyword_search.py  pipeline.py  prompt_builder.py  query_expansion.py  rrf.py  vector_search.py
src/schemas/: __init__.py  chat.py  chunks.py  common.py  file.py  project.py  user.py
src/services/: __init__.py
src/tasks/: __init__.py  celery_app.py  document_tasks.py
supabase/: config.toml
supabase/migrations/: 20250103000001_add_llm_provider.sql  20251206103206_inital_schema.sql  20251214083612_chunk_search_function.sql
supabase/snippets/: Untitled query 422.sql
tests/: conftest.py
tests/unit/: test_rag.py
(+34 files in other folders)
